[package]
name = "freebox-exporter-rs"
version = "0.0.12"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.84", default-features = false }
chrono = "0.4.39"
clap = { version = "4.5.29", default-features = false, features = ["derive", "std"] }
flexi_logger = { version = "0.29.8", default-features = false, features = ["async", "specfile", "compress", "colors"]}
hmac = { version = "0.12.1", default-features = false, features = ["std"] }
lazy_static = "1.5.0"
log = "0.4.22"
prometheus_exporter = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = {version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = "1.0.134"
sha1 = "0.10.6"
time = "0.3.37"
tokio = { version = "1.42.0", default-features = false, features = ["full"]}
toml = "0.8.20"
mockall = "0.13.1"
hostname = "0.4.0"
openssl = { version = "0.10.68", default-features = false, features = ["vendored"] }

[dev-dependencies]
wiremock = "0.6.2"

[[bin]]
name = "freebox-exporter-rs"
path = "src/main.rs"
